--- a/mycss.css
+++ b/mycss.css
@@ -1,1 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+body {
+  background-color: linen;
+}
+
+h1 {
+  color: maroon;
+  margin-left: 40px;
+} 
